--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "dev": "refine dev",
     "build": "tsc && refine build",
     "start": "refine start",
-    "refine": "refine"
+    "refine": "refine",
+      "test": "jest"
   },
   "browserslist": {
     "production": [
